@@ -79,6 +79,10 @@ IN DEVELOPMENT
      contains a symbolic link.
      (Vincent Ladeuil, #141382).
 
+   * Fix 'unprintable error' message when displaying BzrCheckError and 
+     some other exceptions on Python 2.5.
+     (Martin Pool, #144633)
+
    * HttpServer and FtpServer need to be closed properly or a listening socket
      will remain opened.
      (Vincent Ladeuil, #140055)
